# popstack

./: .env.example  .gitignore  README.md  pyproject.toml
anki/: README.md  popstack-and-coram-knowledge.txt
docs/: ARCHITECTURE.md  DECISIONS.md  DESIGN.md  PORTABILITY.md  PRD.md  SETUP.md
src/popstack/: __init__.py  anki.py  codebase.py  config.py  goals.py  grounding.py  notes.py  server.py  stack.py  templates.py  today.py  usage.py  zotero.py
tests/: test_anki.py  test_codebase.py  test_entrypoints.py  test_goals.py  test_grounding.py  test_notes.py  test_server_auth.py  test_stack.py  test_usage.py  test_zotero.py
