[project]
name = "popstack"
version = "0.1.0"
description = "Personal task stack as an MCP server — tasks live in your Obsidian vault, pops are weighted-random, grounding comes from your vault + Zotero, misses become Anki cards."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
popstack = "popstack.server:main"
popstack-today = "popstack.today:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/popstack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
